--- a/build-SysProg_LabWork2_UDP_Chat-Desktop_Qt_5_5_1_GCC_32bit-Debug/Makefile
+++ b/build-SysProg_LabWork2_UDP_Chat-Desktop_Qt_5_5_1_GCC_32bit-Debug/Makefile
@@ -200,7 +200,9 @@ DIST          = /opt/Qt_v.5.5.1/5.5/gcc/mkspecs/features/spec_pre.prf \
 		../SysProg_LabWork2_UDP_Chat/BoostReceiver.hpp \
 		../SysProg_LabWork2_UDP_Chat/BoostSender.hpp \
 		../SysProg_LabWork2_UDP_Chat/udpSocket.hpp \
-		../SysProg_LabWork2_UDP_Chat/multicastUDPsocket.hpp ../SysProg_LabWork2_UDP_Chat/main.cpp \
+		../SysProg_LabWork2_UDP_Chat/multicastUDPsocket.hpp \
+		../SysProg_LabWork2_UDP_Chat/Peers.hpp \
+		../SysProg_LabWork2_UDP_Chat/UsefulDataPacket.hpp ../SysProg_LabWork2_UDP_Chat/main.cpp \
 		../SysProg_LabWork2_UDP_Chat/MulticastReceiver.cpp \
 		../SysProg_LabWork2_UDP_Chat/MulticastSender.cpp \
 		../SysProg_LabWork2_UDP_Chat/SocketLib.cpp \
@@ -522,7 +524,7 @@ dist: distdir FORCE
 distdir: FORCE
 	@test -d $(DISTDIR) || mkdir -p $(DISTDIR)
 	$(COPY_FILE) --parents $(DIST) $(DISTDIR)/
-	$(COPY_FILE) --parents ../SysProg_LabWork2_UDP_Chat/IncludedLibs.h ../SysProg_LabWork2_UDP_Chat/SocketLib.h ../SysProg_LabWork2_UDP_Chat/Sockets.hpp ../SysProg_LabWork2_UDP_Chat/MulticastReceiver.hpp ../SysProg_LabWork2_UDP_Chat/MulticastSender.hpp ../SysProg_LabWork2_UDP_Chat/BoostReceiver.hpp ../SysProg_LabWork2_UDP_Chat/BoostSender.hpp ../SysProg_LabWork2_UDP_Chat/udpSocket.hpp ../SysProg_LabWork2_UDP_Chat/multicastUDPsocket.hpp $(DISTDIR)/
+	$(COPY_FILE) --parents ../SysProg_LabWork2_UDP_Chat/IncludedLibs.h ../SysProg_LabWork2_UDP_Chat/SocketLib.h ../SysProg_LabWork2_UDP_Chat/Sockets.hpp ../SysProg_LabWork2_UDP_Chat/MulticastReceiver.hpp ../SysProg_LabWork2_UDP_Chat/MulticastSender.hpp ../SysProg_LabWork2_UDP_Chat/BoostReceiver.hpp ../SysProg_LabWork2_UDP_Chat/BoostSender.hpp ../SysProg_LabWork2_UDP_Chat/udpSocket.hpp ../SysProg_LabWork2_UDP_Chat/multicastUDPsocket.hpp ../SysProg_LabWork2_UDP_Chat/Peers.hpp ../SysProg_LabWork2_UDP_Chat/UsefulDataPacket.hpp $(DISTDIR)/
 	$(COPY_FILE) --parents ../SysProg_LabWork2_UDP_Chat/main.cpp ../SysProg_LabWork2_UDP_Chat/MulticastReceiver.cpp ../SysProg_LabWork2_UDP_Chat/MulticastSender.cpp ../SysProg_LabWork2_UDP_Chat/SocketLib.cpp ../SysProg_LabWork2_UDP_Chat/BoostReceiver.cpp $(DISTDIR)/
 
 
@@ -626,7 +628,8 @@ main.o: ../SysProg_LabWork2_UDP_Chat/main.cpp /opt/Qt_v.5.5.1/5.5/gcc/include/Qt
 		/usr/local/include/boost/functional \
 		/usr/local/include/boost/regex \
 		/usr/local/include/boost/random \
-		../SysProg_LabWork2_UDP_Chat/multicastUDPsocket.hpp
+		../SysProg_LabWork2_UDP_Chat/multicastUDPsocket.hpp \
+		../SysProg_LabWork2_UDP_Chat/UsefulDataPacket.hpp
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o main.o ../SysProg_LabWork2_UDP_Chat/main.cpp
 
 MulticastReceiver.o: ../SysProg_LabWork2_UDP_Chat/MulticastReceiver.cpp 
